--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "license": "MIT",
     "dependencies": {
         "@notionhq/client": "^2.2.5",
+        "ajv": "^8.17.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.21.2",
